Fix ORG-323 - Clean up CSS to align titles

--- a/assets/less/oc_HomeViewFooter.less
+++ b/assets/less/oc_HomeViewFooter.less
@@ -3,22 +3,8 @@
 @import "oc_colors.less";
 @import "oc_buttons.less";
 
-#oc-home-view-section-read-more-btn-wrapper {
-  text-align: center;
-  margin-top: 35px;
-  margin-bottom: 55px;
-}
-
 .oc-top-accordian {
   margin-top: 25px;
-}
-
-#oc-home-view-section-read-more-btn {
-  .oc-button;
-}
-
-#oc-home-view-section-read-more-btn:hover {
-  background-color: #191115;
 }
 
 .oc-faq {
