--- a/assets/less/oc_HomeViewHeader.less
+++ b/assets/less/oc_HomeViewHeader.less
@@ -20,4 +20,5 @@
   color: @oc-magenta;
   margin-top: 35px;
   margin-bottom: 20px;
+  text-align: center;
 }
