--- a/assets/less/oc_buttons.less
+++ b/assets/less/oc_buttons.less
@@ -14,6 +14,7 @@
 
 .oc-button:hover {
   background-color: @oc-hover-black;
+  color: @oc-white;
 }
 
 .oc-button:disabled {
