--- a/assets/less/oc_footers.less
+++ b/assets/less/oc_footers.less
@@ -26,13 +26,6 @@
   height: 119px;
 }
 
-.oc-footer-large-follow-link {
-  display: inline-block;
-  margin: 30px 0px 10px 0px;
-  font-size: 30px;
-  color: @oc-magenta;
-}
-
 .oc-footer-large-social-links {
   margin-top: 25px;
 }
