--- a/assets/less/oc_input.less
+++ b/assets/less/oc_input.less
@@ -13,6 +13,8 @@
 
 .oc-input:focus {
   border: 1px solid @oc-magenta;
+  -webkit-box-shadow: 0 0 5px @oc-magenta;
+  -moz-box-shadow: 0 0 5px @oc-magenta;
   box-shadow: 0 0 5px @oc-magenta;
 }
 
